gccida/c1/gen_aux_info_record
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_aux_info_record/src/c-aux-info.c:1050:7: error: use of undeclared identifier 'gen_aux_info_record_compiled_from_record'
if ( !gen_aux_info_record_compiled_from_record++ ) 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_aux_info_record/src/obj/c-aux-info.o] Error 1
